objects/API_Log__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <label>Request URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Results</label>
        <referenceTo>Survey_Results__c</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>API Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>